<resources>
    <string name="app_name">FinancasApp</string>
    <string name="dash_message">Aqui está um resumo dos seus gastos mensais</string>
    <string name="streaming">Streaming</string>
    <string name="fitness">Fitness</string>
    <string name="applications">applications</string>
    <string name="more">More</string>
    <string name="statistics">statistics</string>
    <string name="home">Home</string>
    <string name="list">List</string>


    <!-- Dashboard Values Variable -->
    <string name="hello">Olá!</string>
    <string name="total_message">Total mensal R$: 600,00</string>
    <string name="value_streaming">R$: 200,00</string>
    <string name="value_fit">R$: 200,00</string>
    <string name="value_apps">R$: 200,00</string>
    <string name="values_more">R$: 200,00</string>
</resources>