<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddActivity">

    <View
        android:id="@+id/view_topBar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Adicionar Serviço"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/view_topBar"
        app:layout_constraintEnd_toEndOf="@id/view_topBar"
        app:layout_constraintStart_toStartOf="@id/view_topBar"
        app:layout_constraintTop_toTopOf="@id/view_topBar"/>


    <View
        android:id="@+id/view_bottomBar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/ic_statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:src="@drawable/ic_statistics"
        app:layout_constraintBottom_toBottomOf="@id/view_bottomBar"
        app:layout_constraintEnd_toStartOf="@id/ic_home"
        app:layout_constraintStart_toStartOf="@id/view_bottomBar"
        app:layout_constraintTop_toTopOf="@id/view_bottomBar"
        android:contentDescription="@string/statistics"/>

    <ImageView
        android:id="@+id/ic_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_home"
        app:layout_constraintBottom_toBottomOf="@id/view_bottomBar"
        app:layout_constraintEnd_toStartOf="@id/ic_list"
        app:layout_constraintStart_toEndOf="@id/ic_statistics"
        app:layout_constraintTop_toTopOf="@id/view_bottomBar"
        android:contentDescription="@string/home"/>

    <ImageView
        android:id="@+id/ic_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:src="@drawable/ic_list"
        app:layout_constraintBottom_toBottomOf="@id/view_bottomBar"
        app:layout_constraintEnd_toEndOf="@id/view_bottomBar"
        app:layout_constraintStart_toEndOf="@id/ic_home"
        app:layout_constraintTop_toTopOf="@id/view_bottomBar"
        android:contentDescription="@string/list"/>

</androidx.constraintlayout.widget.ConstraintLayout>